Enhance README.md with comprehensive project documentation
Co-authored-by: awin-copilot-agent <216695255+awin-copilot-agent@users.noreply.github.com>